--- a/api-gw/pom.xml
+++ b/api-gw/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.ma</groupId>
+            <artifactId>pedidos</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
