refactor de proyecto con fwk-service

--- a/api-gw/pom.xml
+++ b/api-gw/pom.xml
@@ -57,9 +57,9 @@
             <version>2.8.6</version>
         </dependency>
         <dependency>
-            <groupId>com.ma</groupId>
-            <artifactId>pedidos</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.utn.frd.dds</groupId>
+            <artifactId>fwk-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
