--- a/api-gw/pom.xml
+++ b/api-gw/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.h2database</groupId>
