--- a/fwk-service/src/main/resources/application.properties
+++ b/fwk-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+me quede sin bateria en el auricular
+
+
 # ========= Configuracion de servidor. ==============================
 server.address=localhost
 server.port=8280
@@ -7,7 +10,7 @@ server.port=8280
 spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.url=jdbc:h2:~/demoH2test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.username=sa       
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
