--- a/api-gw/pom.xml
+++ b/api-gw/pom.xml
@@ -46,7 +46,6 @@
             <version>1.5.0</version>
         </dependency>
 
-
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
@@ -58,19 +57,6 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -136,9 +122,16 @@
                     <!-- 			    </execution> -->
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
 
 
 </project>
