modifico path de servicio para que sea etp

--- a/api-gw/src/main/resources/application.properties
+++ b/api-gw/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 # ========= Configuracion de servidor. ==============================
 server.address=localhost
+server.servlet.context-path=/etp
 server.port=8280
